@@ -29,12 +29,7 @@ public:
 
     virtual bool operator==(const LocalObject&) const;
     virtual bool operator<(const LocalObject&) const;
-    virtual ::Ice::Int ice_getHash() const;
-    
-    ICE_DEPRECATED_API ::Ice::Int ice_hash() const
-    {
-        return ice_getHash();
-    }
+    virtual ICE_DEPRECATED_API ::Ice::Int ice_getHash() const;
 };
 
 }
